dataset1235/2025-2/610742602/users/2774042468/executions/677928262_1927446959.log
== RUN (2025-08-28 20:25:11)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(63/100)
prin(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:23:38)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(63/100)
prin(round(y,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:24:55)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(63/100)
prin(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:25:11)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(63/100)
prin(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:26:42)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(42/100)
print(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:23:37)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(63/100)
prin(round(y,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:25:08)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(63/100)
prin(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:25:07)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(63/100)
prin(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:26:24)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(42/100)
prin(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:26:25)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(42/100)
prin(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:26:42)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(42/100)
print(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:24:55)
-- CODE: 
n=float(input("digite seu numero: "))
x=n*(27/100)
print(round(x,2))
y=n+n*(63/100)
prin(round(y,2))
z=n-n*(63/100)
print(round(z,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin(round(y,2))
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
